--- a/vignettes/thesis.bib
+++ b/vignettes/thesis.bib
@@ -5,6 +5,19 @@
   year={2017}
 }
 
+
+
+@article{duffield2024state,
+  title={A state-space perspective on modelling and inference for online skill rating},
+  author={Duffield, Samuel and Power, Samuel and Rimella, Lorenzo},
+  journal={Journal of the Royal Statistical Society Series C: Applied Statistics},
+  volume={73},
+  number={5},
+  pages={1262--1282},
+  year={2024},
+  publisher={Oxford University Press UK}
+}
+
 @Misc{rstan2020,
     title = {{RStan}: the {R} interface to {Stan}},
     author = {{Stan Development Team}},
